# Quantum_AgriClassifier_QAC

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
classical/: __init__.py  baseline.py  data_loader.py
configs/: default.json  fast.json
docs/: Entregavel_Bloco_3_Leonardo_Maximino_Bernardo_QAC.docx  MCP_SERVER_EXECUTION_EXPLAINED.md  VQE_EXTENSION_READY.md  VQE_INCREMENTAL_SPEC.md  VQE_PHASE1_EXECUTION_PLAN.md  VQE_PHASE1_FINAL_REPORT.md  VQE_PHASE1_READY_FOR_EXECUTION.md  VQE_PHASE2_EXPERIMENTAL_PROTOCOL.md  VQE_PHASE2_FINAL_REPORT.md  VQE_PHASE2_RESULTS_TEMPLATE.md
eurosat_vqc_reproduction/: VQE_vs_VQC_EuroSat_Integrated.ipynb  build_integrated_mcp_notebook_v2.py  build_notebook.py  fix_standalone_notebook.py  fix_standalone_notebook_v2.py
experiments/: vqe_phase1.md
experiments/vqe_phase1/: config.yaml  results.md  results_template.md  statistical_tests_template.md
experiments/vqe_phase2/: VQE_PHASE2_L-BFGS-B_reps4_g0.5_h0.5_s123.json  VQE_PHASE2_L-BFGS-B_reps4_g0.5_h0.5_s42.json  VQE_PHASE2_L-BFGS-B_reps4_g0.5_h0.5_s7.json  VQE_PHASE2_L-BFGS-B_reps6_g0.5_h0.5_s123.json  VQE_PHASE2_L-BFGS-B_reps6_g0.5_h0.5_s42.json  VQE_PHASE2_L-BFGS-B_reps6_g0.5_h0.5_s7.json  VQE_PHASE2_L-BFGS-B_reps6_g1.0_h1.0_s123.json  VQE_PHASE2_L-BFGS-B_reps6_g1.0_h1.0_s42.json  VQE_PHASE2_L-BFGS-B_reps6_g1.0_h1.0_s7.json  VQE_PHASE2_cobyla_reps2_g0.5_h0.5_s123.json  VQE_PHASE2_cobyla_reps2_g0.5_h0.5_s42.json  VQE_PHASE2_cobyla_reps2_g0.5_h0.5_s7.json  consolidated_results.json  (+24 more)
mcp_server/: __init__.py  context_manager.py  execution_engine.py  resource_registry.py  schemas.py  server.py  tool_implementations.py  tool_registry.py  vqe_tool.py
notebooks/: QAC_Bloco3_Experiment.ipynb  VQE_vs_VQC_EuroSat_MCP_Integration.ipynb  VQE_vs_VQC_EuroSat_MCP_Integration.py
quantum/: __init__.py  data_reupload.py  feature_map.py  hamiltonian_builder.py  ibm_backend.py  noise.py  qsvm.py  vqc.py  vqe_analysis.py  vqe_classifier.py  vqe_parametric_runner.py
registry/: context.json  experiments.json  metrics.json  models.json
reports/: STRUCTURAL_VALIDATION_REPORT.md  validation_data.json
scripts/: fix_notebook.py  generate_deliverables.py  run_experiment.py  run_vqe_phase1.py  run_vqe_phase2.py  structural_validation.py  upload_to_hf.py
tasks/: lessons.md  todo.md
tests/: __init__.py  test_autonomy.py  test_mcp_core.py  test_reproducibility.py
(+17 files in other folders)
