[project]
name = "quantum-agriclassifier"
version = "0.1.0"
description = "QAC — Quantum AgriClassifier: MCP scientific server for hybrid quantum-classical agricultural classification"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quantum: marks tests requiring quantum simulation",
    "autonomy: marks autonomy/falsification tests",
    "integration: marks integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
