[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-agriclassifier"
version = "2.0.0"
description = "QAC — Quantum AgriClassifier: Hybrid quantum-classical framework for agricultural image classification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "Leonardo Maximino Bernardo" }
]

dependencies = [
    "qiskit>=1.0,<3",
    "qiskit-algorithms>=0.3",
    "qiskit-machine-learning>=0.7",
    "numpy>=1.24,<3",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.4.0",
]
docs = [
    "python-docx>=1.0",
    "python-pptx>=0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: fast unit tests (no real quantum execution)",
    "integration: integration tests (run real VQC on small instances)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "mcp_server/*"]

[tool.coverage.report]
fail_under = 80
